package Lab01;

public interface CurrencyInterface {

    String getName();

    double getConversionFactor();

    String getCurrencyCode();

    double getCurrencyRate();
}
